# Pauta

./: .gitignore  README.md  dev.yokai.Builder.json  meson.build
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/summaries/: 3de5478330c25e90966a431c6eb05f469884bf8e0085ebba0e40730c483d28a8-0e3af9627d81f078821f9dde9ad3eb1a842af84730a2f236b051ceb11df6d336.delta  50f2449e49a8071d47a886eef7dbb174d7220a4cb81f44f736b2ea1eccaadf79-0e3af9627d81f078821f9dde9ad3eb1a842af84730a2f236b051ceb11df6d336.delta  7ea5767029bb0879235873c8c3cafe6180443b748c7929000ae35c80088486b0-0e3af9627d81f078821f9dde9ad3eb1a842af84730a2f236b051ceb11df6d336.delta  8402715e5bc1a10ce6590ff414a265b90f0919965da4674e662dd9746c30f0ab-0e3af9627d81f078821f9dde9ad3eb1a842af84730a2f236b051ceb11df6d336.delta  a0ca56cd5a315407648284b6d22bada3063562b7084f78965984ae2da668af07-0e3af9627d81f078821f9dde9ad3eb1a842af84730a2f236b051ceb11df6d336.delta
.flatpak-builder/checksums/: x86_64-dev.yokai.Builder.json  x86_64-dev.yokai.Pauta.json
.flatpak-builder/git/file_home_kauan_Projects_Pauta/: FETCH_HEAD  config
.flatpak-builder/git/file_home_kauan_Projects_Pauta/objects/pack/: pack-6b6531f6e5c602ffd5e29487e588db79e111d24a.idx  pack-6b6531f6e5c602ffd5e29487e588db79e111d24a.pack  pack-6b6531f6e5c602ffd5e29487e588db79e111d24a.rev
data/: dev.yokai.Builder.desktop.in  dev.yokai.Builder.metainfo.xml.in  dev.yokai.Builder.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.c  meson.build  pauta-application.h  pauta-window.h  pauta-window.ui  pauta.gresource.xml
(+3 files in other folders)
